// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writeConfigFile should convert camelcase keys to snake case before writing config 1`] = `
"project: your_project
arbitrary_config_key: asdf
"
`;

exports[`writeConfigFile should write default config to given path 1`] = `
"project: your_project
"
`;
